<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:padding="@dimen/common_padding_min"
    tools:context=".AllMenu.MenuAlgebraActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:src="@drawable/algebra"
            android:padding="@dimen/common_padding_max"
            android:layout_margin="@dimen/common_padding_min"
            android:background="@drawable/style_icons_algebra"
            android:contentDescription="@string/logotipe_of_geometric_figures" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/algebra_menu"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginBottom="@dimen/common_padding_min"
            android:layout_gravity="center"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_percent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            android:layout_margin="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:src="@drawable/percent"
                    android:background="@drawable/style_icons_algebra"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="30"
                    android:layout_gravity="center"
                    android:padding="@dimen/common_padding_default"
                    android:layout_margin="@dimen/common_padding_min"
                    android:contentDescription="@string/equilateral_triangle_icon" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="70"
                    android:padding="@dimen/common_padding_default"
                    android:text="@string/percent"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textAlignment="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
        android:id="@+id/btn_average"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/average"
                android:background="@drawable/style_icons_algebra"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="30"
                android:layout_gravity="center"
                android:padding="@dimen/common_padding_default"
                android:layout_margin="@dimen/common_padding_min"
                android:contentDescription="@string/triangle_rectangle_icon" />
            <TextView
                android:layout_width="0dp"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:layout_weight="70"
                android:padding="@dimen/common_padding_default"
                android:text="@string/txt_average"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
        android:id="@+id/btn_proportion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/proportion"
                android:background="@drawable/style_icons_algebra"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="30"
                android:layout_gravity="center"
                android:padding="@dimen/common_padding_default"
                android:text="@string/angle_ab"
                android:layout_margin="@dimen/common_padding_min"
                android:contentDescription="@string/square_icon" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="70"
                android:padding="@dimen/common_padding_default"
                android:text="@string/txt_proportion"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
        android:id="@+id/btn_ecuations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/ecuations"
                android:background="@drawable/style_icons_algebra"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="30"
                android:layout_gravity="center"
                android:padding="@dimen/common_padding_default"
                android:layout_margin="@dimen/common_padding_min"
                android:contentDescription="@string/rectangle_icon" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="70"
                android:padding="@dimen/common_padding_default"
                android:text="@string/txt_ecuations"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
        android:id="@+id/btn_fractions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/fractions"
                android:background="@drawable/style_icons_algebra"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="30"
                android:layout_gravity="center"
                android:padding="@dimen/common_padding_default"
                android:layout_margin="@dimen/common_padding_min"
                android:contentDescription="@string/trapezoid_icon" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="70"
                android:padding="@dimen/common_padding_default"
                android:text="@string/txt_fractions"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
        android:id="@+id/btn_mcd_mcm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/mcd_mcm"
                android:background="@drawable/style_icons_algebra"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="30"
                android:layout_gravity="center"
                android:padding="@dimen/common_padding_default"
                android:layout_margin="@dimen/common_padding_min"
                android:contentDescription="@string/rhomb_icon" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="70"
                android:padding="@dimen/common_padding_default"
                android:text="@string/txt_mcd_mcm"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
        android:id="@+id/btn_combinations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/combinations"
                android:background="@drawable/style_icons_algebra"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="30"
                android:layout_gravity="center"
                android:padding="@dimen/common_padding_default"
                android:layout_margin="@dimen/common_padding_min"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="70"
                android:padding="@dimen/common_padding_default"
                android:text="@string/txt_combinations"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
        android:id="@+id/btn_prime_numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/prime_numbers"
                android:background="@drawable/style_icons_algebra"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="30"
                android:layout_gravity="center"
                android:padding="@dimen/common_padding_default"
                android:layout_margin="@dimen/common_padding_min"
                android:contentDescription="@string/hexagon_icon" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="70"
                android:padding="@dimen/common_padding_default"
                android:text="@string/txt_prime_numbers"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
        android:id="@+id/btn_number_generator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        android:layout_margin="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:src="@drawable/number_generator"
                android:background="@drawable/style_icons_algebra"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="30"
                android:layout_gravity="center"
                android:padding="@dimen/common_padding_default"
                android:layout_margin="@dimen/common_padding_min"
                android:contentDescription="@string/circle_icon" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_weight="70"
                android:padding="@dimen/common_padding_default"
                android:text="@string/txt_number_generator"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textAlignment="center"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

        <com.google.android.gms.ads.AdView
            android:id="@+id/bannerMenuGeometryPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"/>

    </LinearLayout>

</ScrollView>